[project]
name = "xensifter_docs"
authors = [{ name = "Mathieu Tarral", email = "mathieu.tarral@protonmail.com" }]
version = "0.1.0"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = { text = "BSD-3-Clause" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = [
    'furo==2023.9.10',
    'myst-parser==2.0.0',
    'Sphinx==7.2.6',
    'sphinx-copybutton==0.5.2',
    'sphinx_design==0.5.0',
    'sphinxcontrib-mermaid==0.9.2',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
